--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,9 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Pixelify+Sans:wght@400..700&display=swap'); */
 body{
+   margin: 0;
+   padding: 0;
+   display: flex;
+   flex-direction: column;
    
 }
 /* color gris #384861 */
@@ -13,15 +17,18 @@ main{
         font-family:sans-serif, Geneva, Tahoma, sans-serif, Haettenschweiler, 'Arial Narrow Bold', sans-serif, 'Times New Roman', Times, serif, Cochin, Georgia, Times, 'Times New Roman', serif, Helvetica, sans-serif, Tahoma, Geneva, Verdana, sans-serif, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, 'Arial Narrow', Arial, sans-serif, Helvetica, sans-serif, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, Times, serif, Tahoma, Geneva, Verdana, sans-serif, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, 'Arial Narrow', Arial, sans-serif ;
     }
 }
+
 header{
     max-width: 1400px;
-    border: 1px dashed green;
     display: flex;
     align-items: end;
     justify-content: space-between;
+    padding: 7px 100px 2px 100px;
     img{
         border-radius: 50%;
-        margin-left: 30px;
+        width: 130px;
+        height: 130px;
+        
     }
     ul{
         /* border: 1px dashed brown; */
@@ -42,24 +49,39 @@ header{
                 color: #384861;
                 cursor: pointer;
             }
+            .focus{
+                color: #58C890;
+            }
             a:hover{
                 color: #58C890;
             }
         }
-        button{
+        .boton-dona{
             all: unset;
-            font-family: "kanit";
-            color: #384861;
-            background-color: #58C890;
-           padding: 7px 12px 7px 12px;
-            border-radius: 30px;
-            border-color: #58C890;
-            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             
+            gap: 0px;
+            opacity: 0px;
+            color: #384861;
+            background: #58C890;
+            border-radius: 30PX;
+            font-family: Kanit;
+            font-size: 16px;
+            font-weight: 400;
+            text-align: center;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+            padding: 7px 12px 7px 12px;
+            cursor: pointer;
+        }
+        .boton-dona:hover{
+            color: #384861;
         }
     }
     .contenedor-logo{
-        /* border: 1px dashed black; */
+        
     }
     .contenedor-nav{
         /* border: 1px dashed blue; */
@@ -72,8 +94,9 @@ main{
 }
 
 footer{
+    margin-top: 20px;
     font-family: "kanit";
-    padding-top: 15px;
+    padding: 15px 100px 0 100px;
     padding-bottom: 15px;
     max-width: 1400px;
     background-color: #58C890;
