--- a/css/conocelos.css
+++ b/css/conocelos.css
@@ -8,13 +8,16 @@ body{
 }
 .portada{
     span{
-        top: 400PX;
-        left: 100PX;
-        position:absolute;
-        z-index: 1;
+        font-family: "kanit";
+        position: absolute;
+        top: 320px; 
+        left: 100px;
+        font-size: 60px; 
+        font-weight: 600;
     }
     img{
-       max-width: 1400px;
+       width: 100%;
+       height: 300PX;
     }
 }
 .contenedor-cards{
@@ -26,7 +29,7 @@ body{
     
     .card{
         position: relative;
-        margin: 10px 10px 20px 10px;
+        margin: 15px 10px 20px 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -35,9 +38,12 @@ body{
             width: 250px;
             border-radius: 20px;
             cursor: pointer;
+
         }
         span{
-            font-weight: 600;
+            font-size: 35px;
+            margin-top: 10px;
+            font-weight: 500;
             cursor: pointer;
         }
     }
@@ -45,7 +51,7 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 30px;
+        
         button{
 
             all: unset;
@@ -66,7 +72,7 @@ body{
             width: 250px;
             height: 30px;
             color: #384861;
-
+            margin-top: 30px;
         }
     }
 }
@@ -309,3 +315,9 @@ body{
 .desaparecer{
     display: none !important;
 }
+h2{
+    margin:30px 0 20px 0px;
+    font-size: 40px;
+    font-weight: 550;
+}
+
