--- a/css/participa.css
+++ b/css/participa.css
@@ -2,10 +2,13 @@
 .contenedor {
     position: relative; /* Establece un contexto de posicionamiento para los elementos dentro */
     width: 100%; /* Ajusta al tamaño que prefieras */
-    max-width: 100vw; /* Opcional, para evitar desbordamientos */
-    overflow: hidden; /* Oculta cualquier contenido fuera del contenedor */
+    
+    padding: 0 100px 0 100px;
+    box-sizing: border-box;
 }
-
+.contenedor-voluntario{
+    padding: 0 50px 0 50px;
+}
 .baner {
     position: relative; /* Mantiene la relación del texto con el contenedor */
     display: inline-block;
@@ -15,18 +18,18 @@
 .baner img {
     display: block; /* Evita el espacio extra alrededor de la imagen */
     width: 100%; /* La imagen ocupa todo el ancho del contenedor */
-    height: auto; /* Mantiene las proporciones de la imagen */
+    height: 300PX; /* Mantiene las proporciones de la imagen */
 }
 
 .baner h1 {
     position: absolute; /* Coloca el texto sobre la imagen */
-    top: 80%; /* Centra verticalmente */
-    left: 20%; /* Centra horizontalmente */
-    transform: translate(-50%, -50%); /* Ajusta la posición para centrar exactamente */
+    top: 180px; /* Centra verticalmente */
+    left: 100px; /* Centra horizontalmente */
+    
     color: #384861;
-    font-family: Kanit; /* Fuente utilizada en el proyecto */
+    font-family: "kanit"; /* Fuente utilizada en el proyecto */
     font-size: 60px; /* Tamaño del texto */
-    font-weight: 500; /* Grosor del texto */
+    font-weight: 600; /* Grosor del texto */
     text-align: center; /* Alineación centrada */
     margin: 0; /* Elimina márgenes extra */
     z-index: 1; /* Asegura que el texto esté sobre la imagen */
@@ -36,9 +39,10 @@
 
 
 h2{
-font-family: sans-serif;
+    margin: 30px 0 0 0;
+    font-family: sans-serif;
 font-size: 40px;
-font-weight: 400;
+font-weight: 550;
 line-height: 72.27px;
 text-align: left;
 text-underline-position: from-font;
@@ -105,8 +109,6 @@ button{
 all: unset;
 width: 150px;
 height: 50px;
-top: 1350px;
-left: -523px;
 gap: 0px;
 opacity: 0px;
 color: #384861;
@@ -120,6 +122,7 @@ text-align: center;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
 margin: 20PX;
+margin-top: 40px;
 
 
 }
@@ -167,6 +170,7 @@ font-weight: 500;
         
 /* Estilos del popup */
 .popup {
+    display: none;
     font-family: kanit;
     font-size: 20px;
     position: fixed;
@@ -184,78 +188,78 @@ font-weight: 500;
     */
 }
 
-.popup-content {
-    position: relative;
-}
-/*
-.popup.hidden {
-    display: none;
-}
-*/
-.popup .close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 20px;
-    cursor: pointer;
-}
 
-/* Fondo oscuro para el modal */
-body.modal-open {
-    overflow: hidden;
-}
 
-body.modal-open::before {
-    content: "";
+
+
+.contenedor-transito{
+    margin-top: 30px;
+    background-color: #EEFFF1;
+    padding: 0 50px 0 50px;
+}
+.perro-popup{
+    z-index: 5;
+    position: fixed; /* Posición fija en la ventana */
+    top: 50%; /* Centrado vertical */
+    left: 50%; /* Centrado horizontal */
+    transform: translate(-50%, -50%); /* Ajuste para centrar */
+
+    background-color: white;
+    font-family: "kanit";
+    border: 1px solid #384861;
+    border-radius: 20px;
+    width: 750px;
+    display: flex;
+    img{
+        height: 400px;
+        margin: 10px;
+        border-radius: 20px;
+    }
+    div{
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        color: #384861;
+        padding-left: 20px;
+        
+        width: 100%;
+        margin-top: 10PX;
+        span{
+            margin-bottom: 15px;
+        }
+        .titulo{
+            font-size: 40px;
+            align-self: center;
+            margin-bottom: 20px;
+        }
+        button{
+            
+            all: unset;
+            align-self: center;
+            font-size: 16px;
+            width:fit-content;
+            font-family: "kanit";
+            font-weight: normal;
+            color: #384861;
+            background-color: #58C890;
+           padding: 7px 18px 7px 18px;
+            border-radius: 30px;
+            border-color: #58C890;
+            cursor: pointer;
+            
+            margin: 20px 0 10px 0;
+        }
+    }
+}
+.fondoFalso{
+    
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.733); /* Oscurece con transparencia */
 }
-
-.option-label {
-     font-family: kanit;
-    font-size: 20px; /* Tamaño más pequeño para el texto */
-    display: flex;
-    align-items: center;
-    gap: 8px;
+.desaparecer{
+    display: none !important;
 }
-
-.option-label input {
-    margin-right: 5px;
-}
-
-
-
-
-
-/* Input de correo electrónico más grande y cuadrado */
-.input-large {
-    
-   
-width: 100%;
-    padding: 12px;
-    
-   
-font-size: 16px; /* Tamaño de letra más grande */
-    border-radius: 5px; /* Cuadrado (con bordes ligeramente redondeados) */
-    
-   
-border: 1px solid #ccc;
-    
-  
-box-sizing: border-box; /* Para evitar que el padding aumente el tamaño */
-}
-
-.input-large:focus {
-    outline: none;
-    border-color: #007BFF; /* Color de borde al enfocar */
-    
-   
-box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
-
-
