--- a/css/quieroAdoptar.css
+++ b/css/quieroAdoptar.css
@@ -1,8 +1,10 @@
 .contenedor {
     position: relative; /* Establece un contexto de posicionamiento para los elementos dentro */
     width: 100%; /* Ajusta al tamaño que prefieras */
-    max-width: 100vw; /* Opcional, para evitar desbordamientos */
-    overflow: hidden; /* Oculta cualquier contenido fuera del contenedor */
+    /* max-width: 100vw;  */
+    /* overflow: hidden; Oculta cualquier contenido fuera del contenedor */
+    padding: 0 100px 0 100px;
+    box-sizing: border-box;
 }
 
 .baner {
@@ -14,18 +16,18 @@
 .baner img {
     display: block; /* Evita el espacio extra alrededor de la imagen */
     width: 100%; /* La imagen ocupa todo el ancho del contenedor */
-    height: auto; /* Mantiene las proporciones de la imagen */
+    height: 300PX; /* Mantiene las proporciones de la imagen */
 }
 
 .baner h1 {
     position: absolute; /* Coloca el texto sobre la imagen */
-    top: 80%; /* Centra verticalmente */
-    left: 20%; /* Centra horizontalmente */
-    transform: translate(-50%, -50%); /* Ajusta la posición para centrar exactamente */
+    top: 180px; /* Centra verticalmente */
+    left: 100px; /* Centra horizontalmente */
+    
     color: #384861;
-    font-family: Kanit; /* Fuente utilizada en el proyecto */
+    font-family: "kanit"; /* Fuente utilizada en el proyecto */
     font-size: 60px; /* Tamaño del texto */
-    font-weight: 500; /* Grosor del texto */
+    font-weight: 600; /* Grosor del texto */
     text-align: center; /* Alineación centrada */
     margin: 0; /* Elimina márgenes extra */
     z-index: 1; /* Asegura que el texto esté sobre la imagen */
@@ -106,19 +108,19 @@ text-align: left;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
 
-
 }
 
 
 .card-titulo{
+    background-color: white;
+    position: absolute;
+    top: 490px;
     display: flex;
     align-items: center;
     justify-content: center;
 font-family: sans-serif;
 width: 220px;
 height: 41.63px;
-top: 173.25px;
-left: 25.24px;
 gap: 0px;
 border-radius: 30px;
 border: 3px 0px 0px 0px;
@@ -144,9 +146,10 @@ font-size: 30px;
 }
 
 h2{
+    margin: 30px 0 0 0;
     font-family: sans-serif;
 font-size: 40px;
-font-weight: 400;
+font-weight: 550;
 line-height: 72.27px;
 text-align: left;
 text-underline-position: from-font;
@@ -154,6 +157,7 @@ text-decoration-skip-ink: none;
 
 }
 h3{
+    margin-top: 0;
     font-family: Kanit;
 font-size: 32px;
 font-weight: 400;
@@ -167,10 +171,9 @@ text-decoration-skip-ink: none;
 
 
 .requisitos{
-width: 1200px;
-height: 754px;
-top: 660px;
-left: -600px;
+    margin-top: 30px;
+
+
 gap: 0px;
 opacity: 0px;
 background: #EEFFF1;
@@ -180,6 +183,7 @@ padding: 30px;
 }
 span{
     margin-top: 20px;
+    font-size: 20px;
 }
 
 .req{
@@ -193,12 +197,15 @@ text-decoration-skip-ink: none;
 margin-top: 20px;
 }
 
-button{
+.button{
+    
     all: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
     width: 150px;
     height: 50px;
-    top: 1350px;
-    left: -523px;
     gap: 0px;
     opacity: 0px;
     color: #384861;
@@ -211,12 +218,12 @@ line-height: 29.9px;
 text-align: center;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
-
+cursor: pointer;
 
 }
 .edad{
     font-family: sans-serif;
-  
+  margin-top: 20px;
 font-size: 20px;
 font-weight: 600;
 line-height: 36.13px;
@@ -232,3 +239,4 @@ text-decoration-skip-ink: none;
    align-items: center;
 
 }
+ 
