--- a/css/participa.css
+++ b/css/participa.css
@@ -203,24 +203,21 @@ font-weight: 500;
     top: 50%; /* Centrado vertical */
     left: 50%; /* Centrado horizontal */
     transform: translate(-50%, -50%); /* Ajuste para centrar */
-
+    padding: 20px;
     background-color: white;
     font-family: "kanit";
     border: 1px solid #384861;
     border-radius: 20px;
-    width: 750px;
+    height: 400px;
     display: flex;
-    img{
-        height: 400px;
-        margin: 10px;
-        border-radius: 20px;
-    }
-    div{
+    
+    .contenedor-campos{
         display: flex;
         flex-direction: column;
+        align-items: center;
         font-size: 20px;
         color: #384861;
-        padding-left: 20px;
+        
         
         width: 100%;
         margin-top: 10PX;
@@ -228,9 +225,31 @@ font-weight: 500;
             margin-bottom: 15px;
         }
         .titulo{
+            margin-top: 0;
             font-size: 40px;
             align-self: center;
-            margin-bottom: 20px;
+            
+        }
+        .campo{
+            width: 80%;
+            display: flex;
+            justify-content: space-between;
+            margin-top: 15px;
+        }
+        .mail{
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+
+        }
+        .error{
+            
+            border-radius: 5px;
+           
+            margin: 5px 0 1px 0;
+            font-size: 16px;
+            color: rgb(243, 47, 47);
         }
         button{
             
@@ -247,7 +266,7 @@ font-weight: 500;
             border-color: #58C890;
             cursor: pointer;
             
-            margin: 20px 0 10px 0;
+            margin: 40px 0 10px 0;
         }
     }
 }
