--- a/css/dona.css
+++ b/css/dona.css
@@ -1,6 +1,7 @@
 html{
     scroll-behavior:smooth;
 }
+
 .portada{
     height: 300px;
     width: 100%;
@@ -37,7 +38,8 @@ html{
     justify-content: space-around;
     background-color: #EEFFF1;
     padding: 50px 50px 50px 50px;
-    
+    max-width:1400px;
+
     .mercado-pago{
         img{
             margin: 30px;
@@ -108,4 +110,17 @@ html{
     margin:20px 0 0 100px;
     font-size: 40px;
     font-weight: 550;
+}
+.contenedor-pagina{
+    max-width: 1400px;
+    
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contenedor-footer{
+    max-width: 1400px;
+    align-self: center;
 }
