--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -10,10 +10,11 @@
     color: #58C890;
 }
 .contenedor {
-    position: relative; /* Establece un contexto de posicionamiento para los elementos dentro */
-    width: 100%; /* Ajusta al tamaño que prefieras */
-    max-width: 100vw; /* Opcional, para evitar desbordamientos */
-    overflow: hidden; /* Oculta cualquier contenido fuera del contenedor */
+    display: flex;
+    
+    justify-content: center;
+    
+   
 }
 
 .baner {
@@ -57,6 +58,9 @@ margin-left: 15px;
 
 .contenedor-maximo{
     padding: 0 100px 0 100px;
+    max-width: 1400px;
+    box-sizing: border-box;
+    
 }
 .container{
 
