--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@ body{
 /* color gris #384861 */
 /* color verde fuerte #58C890 */
 main{
-  
+    margin-top: 20px;
     div{
         color: #384861;
         font-size: 40px;
@@ -20,13 +20,14 @@ main{
 }
 
 header{
-   box-sizing: border-box;
+    
     display: flex;
     align-items: end;
     justify-content: space-between;
     padding: 7px 100px 2px 100px;
     width: 1400px;
     align-self: center;
+    box-sizing: border-box;
     img{
         border-radius: 50%;
         width: 130px;
@@ -93,6 +94,7 @@ header{
 
 
 footer{
+    margin-top: 20px;
     width: 100%;
     background-color: #58C890;
 }
