--- a/css/dona.css
+++ b/css/dona.css
@@ -13,6 +13,7 @@ html{
     left: 100px;
     font-size: 60px; 
     font-weight: 600;
+    color: #384861;
 }
 .intro{
     font-family: "kanit";
@@ -123,4 +124,13 @@ main{
 .contenedor-footer{
     max-width: 1400px;
     align-self: center;
+}
+.detalle-insumos{
+    font-size: 20px;
+    font-weight:normal;
+    line-height: 30px;
+    a{
+        font-weight: bold;
+        color: #384861;
+    }
 }
