--- a/css/conocelos.css
+++ b/css/conocelos.css
@@ -33,12 +33,14 @@ body{
     align-items: center;
     text-align: center;
     
+    
     .card{
         position: relative;
         margin: 15px 10px 20px 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: transform 0.3s ease;
         
         img{
             width: 250px;
@@ -81,6 +83,9 @@ body{
             margin-top: 30px;
         }
     }
+}
+.card:hover{
+    transform: scale(1.1);
 }
 .paginado{
     font-size: 20px;
