--- a/css/base.css
+++ b/css/base.css
@@ -24,7 +24,7 @@ header{
     display: flex;
     align-items: end;
     justify-content: space-between;
-    /* padding: 7px 100px 2px 100px; */
+    /*padding: 7px 100px 2px 100px; */
     max-width: 1400px;
     align-self: center;
     box-sizing: border-box;
@@ -32,6 +32,7 @@ header{
         border-radius: 50%;
         width: 130px;
         height: 130px;
+        margin-right: 200px;
         
     }
     ul{
