--- a/css/conocelos.css
+++ b/css/conocelos.css
@@ -383,3 +383,90 @@ header{
     
    
 }
+
+.boton-cerrar-sesion {
+   
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    position:absolute;
+}
+
+.boton-cerrar-sesion img {
+    width: 30px;
+    height: 30px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modal-contenido {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.modal-contenido p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.btn-confirmar {
+    all: unset;
+    align-self: center;
+    font-size: 16px;
+    width:fit-content;
+    font-family: "kanit";
+    font-weight: 500;
+    color: #384861;
+    background-color: #58C890;
+   padding: 7px 18px 7px 18px;
+    border-radius: 30px;
+    border-color: #58C890;
+    cursor: pointer;
+    margin: 30px 0 10px 0;
+}
+
+.btn-cancelar {
+    all: unset;
+            
+            font-size: 16px;
+            width:fit-content;
+            font-family: "kanit";
+            font-weight: normal;
+            color: #384861;
+            background-color: #ffffff;
+           padding: 5px 18px 5px 18px;
+            border-radius: 30px;
+            border: 2px solid #384861;
+            
+            cursor: pointer;
+            
+}
+p{
+    font-family: kanit;
+    font-size: 20px;
+    color:#384861;
+}
+
+.aceptar{
+    text-decoration: none;
+    font-family: kanit;
+    color:#384861;
+
+    
+}
+
