--- a/css/participa.css
+++ b/css/participa.css
@@ -226,7 +226,7 @@ font-weight: 500;
         }
         .titulo{
             margin-top: 0;
-            font-size: 40px;
+            font-size: 30px;
             align-self: center;
             
         }
@@ -268,6 +268,10 @@ font-weight: 500;
             
             margin: 40px 0 10px 0;
         }
+        input{
+            height: 20px;
+            border: 1px #384861 solid
+        }
     }
 }
 .fondoFalso{
@@ -285,3 +289,4 @@ font-weight: 500;
 .contenedor-maximo{
     max-width: 1400px;
 }
+
